# amaguri

./: .gitignore  .sample.env  Cargo.toml  Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.cargo/: config.toml
.github/workflows/: build-image.yml  push-image.yml
migrations/: 0001_init.sql
src/: app.rs  constants.ts  index.ts  main.rs  monitor.ts  types.ts
src/services/: discord.ts  emailStateStore.ts  imapClient.ts
src/utils/: hash.ts
