[package]
name = "daken"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
imap = "2.4.1"
mailparse = "0.16.1"
native-tls = "0.2.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
