[package]
name = "amaguri"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
mailparse = "0.16.1"
async-imap = { version = "0.11.1", default-features = false, features = [
    "runtime-tokio",
] }
async-native-tls = { version = "0.5", default-features = false, features = [
    "runtime-tokio",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
